Fix viewport overflow
Fixed an issue where when the page was fading in the viewport would be exceeded, causing a scrollbar.

--- a/nasa-explore/src/components/home/Home.css
+++ b/nasa-explore/src/components/home/Home.css
@@ -1,11 +1,6 @@
-.Home-container {
-    position: relative;
-    overflow: hidden;
-}
-
 .Homepage {
     background-color:rgb(0, 0, 0);
-    min-height: 100vh;
+    min-height: 95vh;
     display: flex;
     flex-direction: column;
     align-items: center;
